feat: add register device and associated checks
