# src/routes/index.ts
@@ -2,6 +2,7 @@ import { Router } from 'express';
 import userRoutes from '../routes/userRoutes';
 import authRoutes from '../routes/authRoutes';
 import householdRoutes from '../routes/householdRoutes';
+import deviceRoutes from '../routes/deviceRoutes';
 
 import type { Router as IRouter } from 'express';
 
@@ -10,5 +11,6 @@ const router: IRouter = Router();
 router.use('/users', userRoutes);
 router.use('/login', authRoutes);
 router.use('/households', householdRoutes);
+router.use('/devices', deviceRoutes);
 
 export default router;
